@@ -7,6 +7,8 @@
     * Refactor ‘fork_then_exit_parent’ functionality to avoid duplicate
       code.
     * Remove redundant imports.
+    * Remove unused code from unit test suite scaffold.
+    * Add specific license terms for unit test suite scaffold.
 
 2009-09-03  Ben Finney  <ben+python@benfinney.id.au>
 
